refactor: rename room services API to service-overrides
